--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@shopify/buy-button-js": "^2.1.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "prettier": "^2.2.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-image-mapper": "0.0.11",
